# Techgnosis

./: .gitignore  BLOCKCHAIN_IMPLEMENTATION_CHECKLIST.md  COMPLETE_SPECIFICATION.md  CRITICAL_TIMELINE.md  DASHBOARD_COMPLETION.md  DEVNET_SHRINE_QUICKSTART.tech  ECOSYSTEM_INDEX.md  ECOSYSTEM_QUICK_REFERENCE.md  EXECUTE_NOW.md  FILE_MANIFEST.txt  FINAL_AUDIT_777_VEILS_COMPLETE.md  GENESIS_CHECKLIST.md  GENESIS_LAUNCH_GUIDE.md  GITHUB_PUSH_INSTRUCTIONS.md  IMPLEMENTATION_PROGRESS.md  INTEGRATION_SUMMARY.txt  MANIFEST.md  Makefile  Makefile.veilsim  OBATALA_FINAL_AUDIT.md  OBATALA_FINAL_AUDIT_v8.md  PHASE_6_COMPLETION.md  PRIVACY_FRAMEWORK_EVALUATION.md  PUSH_READY_SUMMARY.md  Project.toml  QUICK_START.md  README.md  START_HERE.md  SYSTEM_STATUS.txt  THREAD_STATE.md  THREAD_STATE_v7.md  TOKENOMICS_ASE.md  VEIL777_ANTI_GAMING.md  VEIL777_CATEGORIES.md  VEIL777_FINAL_SPEC.md  VEIL777_MASTER_MANIFEST.md  VEILOS_EXECUTION_GUIDE.md  VEILSIM_ECOSYSTEM.md  VEILS_777_README.md  VEIL_COMPLETION_SUMMARY.md  (+21 more)
blockchain/consensus/: Cargo.toml  README.md
blockchain/consensus/src/: block.rs  consensus.rs  crypto.rs  error.rs  lib.rs  messages.rs  state.rs  validator.rs
blockchain/consensus/tests/: consensus_tests.rs
dashboard/: app.js  index.html  simulator.html  style.css  veil.html  veilos.html
examples/: ci_pipeline.tech  control_systems.tech  first_canon.tech  inheritance.tech  inheritance_1440.oso  inheritance_claim.oso  ml_training.tech  quantum_simulation.tech  robot_kinematics.tech  safe_patch.tech  sango_offering.tech  signal_processing.tech  stream_validator.tech  (+4 more)
(+54 files in other folders)
