[package]
name = "oso-consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptography
ed25519-dalek = "2.1"
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Networking primitives
bytes = "1.5"
byteorder = "1.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = "0.4"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "oso-node"
path = "src/bin/node.rs"

[lib]
name = "oso_consensus"
path = "src/lib.rs"
